--- a/05-VueFundamentals/employee.html
+++ b/05-VueFundamentals/employee.html
@@ -1,20 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
+  <div id="app">
+    <h2>EMPLOYEE RECORD</h2>
+    <div>Name1: {{name1}}</div>
+    <div v-if="name2">Name2: {{name2}}</div>
+    <div>Surname: {{surname}}</div>
+    <div v-if="!foreigner">Pesel: {{pesel}}</div>
+    <div v-else>Nationality: {{nationality}}</div>
+    <div>Address: {{address}}</div>
+  </div>
   <script>
     var app = new Vue({
       el: '#app',
       data: {
-        name1: 'Adam',
-        name2: 'Jan',
-        surname: 'Majewski',
-        foreigner: false,
-        nationality: 'Polish',
-        pesel: '92021708229',
-        address: 'ul. Szeroka 3, Kraków',
+          name1: 'John',
+          name2: '',
+          surname: 'Brown',
+          foreigner: true,
+          nationality: 'USA',
+          pesel: '',
+          address: 'Holland Drive 4, Chicago'
+          // name1: 'Adam',
+          // name2: 'Jan',
+          // surname: 'Majewski',
+          // foreigner: false,
+          // nationality: 'Polish',
+          // pesel: '92021708229',
+          // address: 'ul. Szeroka 3, Kraków'
+
+      }
     });
   </script>
 
