--- a/05-VueFundamentals/product.html
+++ b/05-VueFundamentals/product.html
@@ -1,24 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <style>
+    #app {
+      width: 210px;
+    }
+    .receipt {
+      border-bottom: 1px dashed #000;
+    }
+
+    .total {
+      border-top: double #000;
+    }
+  </style>
 </head>
 <body>
-  <h1>Grades</h1>    
-
-  <script>
+<h1>Grades</h1>
+<div id="app">
+  <h1 class="receipt"><b>RECEIPT</b></h1>
+  <div>Product: {{product.name}}</div>
+  <div>Unit Price: {{product.unitPrice}} zł</div>
+  <div>Quantity: {{product.quantity}}</div>
+  <div>Amount: {{product.quantity * product.unitPrice}} zł</div>
+  <div>VAT Tax Rate: {{product.VAT}}%</div>
+  <h1 class="total"><b>Total: {{getFullPrice()}} zł</b></h1>
+</div>
+<script>
     var app = new Vue({
-      el: '#app',
-      data: {
-        product: {
-          name: 'book',
-          unitPrice: 17.5,
-          quantity: 3,
-          VAT: 23
+        el: '#app',
+        data: {
+            product: {
+                name: 'book',
+                unitPrice: 17.5,
+                quantity: 3,
+                VAT: 23
+            }
+        },
+        methods: {
+            getFullPrice() {
+                return (this.product.unitPrice * this.product.quantity * (1 + this.product.VAT/100)).toFixed(2);
+            }
         }
-      }
     });
-  </script>
+</script>
 
 </body>
 </html>
