--- a/05-VueFundamentals/todo.html
+++ b/05-VueFundamentals/todo.html
@@ -1,21 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <style>
+    ol {
+      padding-left: 15px;
+    }
+  </style>
 </head>
 <body>
-  <script>
+<div id="app">
+  <h3>DO WYKONANIA</h3>
+  <ol>
+    <li v-for="item in todo">{{item}}</li>
+  </ol>
+  <h3>DO WYKONANIA</h3>
+  <ol>
+    <li v-for="item in sortedTodo">{{item}}</li>
+  </ol>
+</div>
+<script>
     var app = new Vue({
-      el: '#app',
-      data: {
-        todo: [
-          'Purchase two tickets to cinema',
-          'Feed cat',
-          'Pay cable bill',
-          'Go shopping'
-      }
+        el: '#app',
+        data: {
+            todo: [
+                'Purchase two tickets to cinema',
+                'Feed cat',
+                'Pay cable bill',
+                'Go shopping'
+            ]
+        },
+        computed: {
+            sortedTodo: function () {
+                return [...this.todo].sort();
+            }
+        }
     });
-  </script>
+</script>
 
 </body>
 </html>
