--- a/06-VueDataBinding/bmi.html
+++ b/06-VueDataBinding/bmi.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
-  <h1>Body Mass Index</h1>
-  <div id="app">
-    <span>Waga: </span>
-    <input> kg<br>
-    <span>Wzrost: </span>
-    <input> cm
-    <p>Wskaźnik BMI:</p>
-  </div>
-  <script>
+<h1>Body Mass Index</h1>
+<div id="app">
+  <span>Waga: </span>
+  <input v-model.number="weight"> kg<br>
+  <span>Wzrost: </span>
+  <input v-model.number="height"> cm
+  <p>Wskaźnik BMI: <b>{{bmi}}</b></p>
+</div>
+<script>
     var app = new Vue({
-      el: '#app',
-      data: {
-      }
+        el: '#app',
+        data: {
+            weight: 0,
+            height: 0
+        },
+        computed: {
+            bmi() {
+                if (!this.height || !this.weight) {
+                    return 0;
+                }
+                const heightInM = this.height / 100;
+                return (this.weight / (heightInM * heightInM)).toFixed(2);
+            }
+        }
     });
-  </script>
+</script>
 
 </body>
 </html>
