--- a/06-VueDataBinding/todo.html
+++ b/06-VueDataBinding/todo.html
@@ -11,9 +11,7 @@
     <button type="button" @click="add()">Add</button>
     <h3>To Do List</h3>
     <ol>
-      <li>...</li>
-      <li>...</li>
-      <li>...</li>
+      <li v-for="todo in todos" v-on:dblclick="remove(todo)">{{todo}}</li>
     </ol>
   </div>
   <script>
@@ -26,6 +24,10 @@
       methods: {
         add: function() {
           this.todos.push(this.todo);
+          this.todo = '';
+        },
+        remove: function(todo) {
+            this.todos = this.todos.filter(t => t !== todo);
         }
       }
     });
